feat: refactor and prepare architecture for new game modes
key changes:

- refactor GuessAttempt to sealed interface permitting ClassicGuessAttempt and NameOnlyGuessAttempt to mode-specific requirements

- split PlayerService into PlayerService, PlayerCredentialsService and PlayerCredentialsService

- update several api endpoints to require and process new GameMode enum

- adapt front-end logic for classic mode (only)

- refactor and split CardMatchingService and MatchUtils for upcoming images and quotes modes

- add and update unit and integration tests